--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -1,3 +1,4 @@
+@import url("./global.css");
 @font-face {
     font-display: swap;
     font-family: Signifier;
@@ -10258,8 +10259,7 @@ div p {
 
 
 div p:nth-of-type(2) {
-    clip-path: polygon(0% 60%, 100% 50%, 100% 100%, 0% 100%);
-    color: transparent;
+    color: black;
     background: -webkit-linear-gradient(177deg, black 53%, white 65%);
     background: linear-gradient(177deg, black 53%, white 65%);
     background-clip: text;
@@ -10407,3 +10407,5 @@ div p:nth-of-type(2) {
     background-color: #0033a0;
     border-radius: 20%;
 }
+
+
